--- a/back/.env
+++ b/back/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD= 12345678
-DB_NAME=serviciosocial
-Port=5001
-JWT_SECRET=miclavesupersegura123
+DB_PASSWORD="Recamara3#$"
+DB_NAME=servicio_social
+Port=500
+JWT_SECRET=clave_secreta
