error doble postulacion

--- a/back/.env
+++ b/back/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD= PueTex14.Gilm
+DB_PASSWORD=
 DB_NAME=serviciosocial
 Port=5001
 JWT_SECRET=miclavesupersegura123
