--- a/front/package.json
+++ b/front/package.json
@@ -15,13 +15,16 @@
     "@mui/x-data-grid": "^8.4.0",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.1",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
